1024px media styles

--- a/src/index.html
+++ b/src/index.html
@@ -348,14 +348,14 @@
                     #squash4friends
                 </div>
                 <ul class="instagram__feed" id="insta-slider">
-                    <li class="instagram__item"><img src="img/image_1.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_2.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_3.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_4.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_1.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_2.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_3.png" alt=""></li>
-                    <li class="instagram__item"><img src="img/image_4.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_1.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_2.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_3.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_4.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_1.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_2.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_3.png" alt=""></li>
+                    <li class="instagram__item"><img class="instagram__image" src="img/image_4.png" alt=""></li>
                 </ul>
                 <div class="instagram__footer">
                     <div class="instagram__linkBlock linkBlock">
