--- a/src/index.html
+++ b/src/index.html
@@ -66,24 +66,29 @@
 <header class="header">
     <div class="menu">
         <nav class="menu__block navigation nav">
-            <div class="navigation__item navigation__item--red ">
+            <div class="navigation__item navigation__item--red navigation__item--mobile">
                 <div class="logoSymbol logoSymbol--link logoSymbol--white">
-                    <a class="navigation__link navigation__link--white" href="/">squash4friends</a>
+                    <a class="navigation__link navigation__link--white" href="/"><span class="navigation__text">
+                        squash4friends</span><span class="navigation__text navigation__text--mobile">
+                        s4f</span></a>
                 </div>
             </div>
-            <div class="navigation__item ">
+            <div class="navigation__item navigation__item--mobile navigation__item--menu">
+                <button class="navigation__link"><span></span>Меню</button>
+            </div>
+            <div class="navigation__item">
                 <a class="navigation__link" href="/clubs.html">Клубы</a>
             </div>
-            <div class="navigation__item ">
+            <div class="navigation__item">
                 <a class="navigation__link" href="/ambassadors.html">Амбассадоры</a>
             </div>
-            <div class="navigation__item ">
+            <div class="navigation__item">
                 <a class="navigation__link" href="/about.html">О нас</a>
             </div>
-            <div class="navigation__item ">
+            <div class="navigation__item">
                 <a class="navigation__link" href="/wiki.html">Сквош-вики</a>
             </div>
-            <div class="navigation__item ">
+            <div class="navigation__item">
                 <a class="navigation__link" href="/articles.html">Статьи</a>
             </div>
         </nav>
@@ -107,9 +112,7 @@
                     <div class="slide__description slideDescription slide__block">
                         <div class="slide__title slideTitle slideTitle--leftpad">
                     <span class="slideTitle__text slideTitle__text--red-white">
-                        Влюбляем
-                    </span>
-                            <br>
+                        Влюбляем</span>
                             <span class="slideTitle__text">в сквош</span>
                         </div>
                         <div class="slideDescription__content ">
@@ -155,10 +158,7 @@
                     <div class="slide__description slideDescription slide__block">
                         <div class="slide__title slideTitle">
                     <span class="slideTitle__text slideTitle__text--red-white">
-                        Влюбляем
-                    </span>
-                            <br>
-                            <span class="slideTitle__text">в сквош</span>
+                        Влюбляем</span> <span class="slideTitle__text">в сквош</span>
                         </div>
                         <div class="slideDescription__content ">
                             <div class="logoSymbol"> <span
@@ -203,10 +203,7 @@
                     <div class="slide__description slideDescription slide__block">
                         <div class="slide__title slideTitle">
                     <span class="slideTitle__text slideTitle__text--red-white">
-                        Влюбляем
-                    </span>
-                            <br>
-                            <span class="slideTitle__text">в сквош</span>
+                        Влюбляем</span> <span class="slideTitle__text">в сквош</span>
                         </div>
                         <div class="slideDescription__content ">
                             <div class="logoSymbol"> <span
@@ -251,10 +248,7 @@
                     <div class="slide__description slideDescription slide__block">
                         <div class="slide__title slideTitle">
                     <span class="slideTitle__text slideTitle__text--red-white">
-                        Влюбляем
-                    </span>
-                            <br>
-                            <span class="slideTitle__text">в сквош</span>
+                        Влюбляем</span> <span class="slideTitle__text">в сквош</span>
                         </div>
                         <div class="slideDescription__content ">
                             <div class="logoSymbol"> <span
@@ -308,8 +302,7 @@
     <section class="about">
         <div class="about__block about__block--grey">
             <div class="about__title aboutTitle titleText">
-                Кто мы и почему <br>
-                <span class="red">любим сквош</span>
+                Кто мы и почему <span class="red">любим сквош</span>
             </div>
             <div class="aboutDescription__content ">
                 <div class="logoSymbol">
